--- a/service/like/src/main/resources/application.yml
+++ b/service/like/src/main/resources/application.yml
@@ -1,1 +1,15 @@
 server.port: 8002
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/article_like
+    username: root
+    password: qwer1234
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: false
+    properties:
+      hibernate:
+        format_sql: true
